# Stack-Composer

./: .biome.json  .editorconfig  .eslintrc.json  .gitignore  .htmlhintrc  .markdownlint-cli2.yaml  .markdownlint.json  .markdownlintignore  .pnp.cjs  .prettierignore  .stylelintrc.json  .vale.ini  .valeignore  .yamllint  Cargo.toml  LICENSE  MAINTAINERS.md  PROJECTS.md  PROJECT_BRIEF.md  QUICK_START_MACOS.md  README.md  ROADMAP.md  TASK_GRAPH.md  biome.json  book.toml  cargo-deny.toml  custom.css  deny.toml  duplicate_docs_report.txt  eslint.config.js  justfile  link-map.json  linkcheck-report.txt  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts  vitest.setup.ts
.changeset/: README.md  config.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  labeler.yml
.husky/: pre-commit
.trunk/: ._trunk.yaml  .gitignore  trunk-ignore.yaml  trunk.yaml
adr/: adr-0000-template.md  adr-0001-gtk3-security-advisory-overrides.md  adr-log.md
agents/orchestrator/: Cargo.toml
agents/orchestrator/src/: main.rs
book/: 404.html  book.js  clipboard.min.js  custom.css  elasticlunr.min.js  highlight.js  index.html  mark.min.js  print.html  searcher.js  searchindex.js  toc.html  toc.js
config/: .biome.json  .eslintrc.unicorn.json  .markdownlint-cli2.jsonc  .markdownlint-cli2.yaml  .markdownlint.json  .markdownlintignore  .vale.ini  Cargo.toml  biome.json  book.toml  justfile  lychee.toml  tsconfig.json  vite.config.ts  vitest.setup.ts
docs/: CODE_OF_CONDUCT.md  OKRS.md  (+29 more)
(+335 files in other folders)
