[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
anyhow = "1"
ingestion = { path = "../ingestion" }
retrieval = { path = "../retrieval" }
critic = { path = "../critic" }
stack-telemetry = { path = "../telemetry" }
